10_06_25_home_page_css

--- a/index.html
+++ b/index.html
@@ -668,6 +668,9 @@
                             <div class="col-lg-4 col-12 mb-24">
                                 <div class="rx-amenities-contact amenities-animation">
                                     <div class="inner-banner">
+                                        <div class="acco-logo-area">
+                                            <img src="assets/dev-img/accommodation/onex-logo.jpg">
+                                        </div>
                                         <h4>Onex Banquet</h4>
                                         <h5>
                                             For every Occassion
@@ -717,6 +720,9 @@
                             <div class="col-lg-4 col-12 mb-24">
                                 <div class="rx-amenities-contact amenities-animation">
                                     <div class="inner-banner">
+                                        <div class="acco-logo-area">
+                                            <img src="assets/dev-img/accommodation/onex-logo.jpg">
+                                        </div>
                                         <h4>Sapphire Banquet</h4>
                                         <h5>
                                             For all Events
