--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="assets/css/vendor/aos.css">
     <link rel="stylesheet" href="assets/css/vendor/animate.min.css">
     <link rel="stylesheet" href="assets/css/vendor/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/jquery-ui.min.css">
+    <!-- <link rel="stylesheet" href="assets/css/vendor/jquery-ui.min.css"> -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="assets/css/vendor/slick.min.css">
     <link rel="stylesheet" href="assets/css/vendor/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/vendor/swiper-bundle.min.css">
@@ -355,13 +356,11 @@
                 <div class="container desktop">
                     <div>
                         <span class="heading">Arrive</span>
-                        <input class="date arrival datepicker form-control input active" placeholder="Arrival Date"
-                            type="text" readonly="readonly">
+                        <input class="date arrival datepicker form-control input active" placeholder="Arrival Date" type="text" readonly="readonly" id="arrival">
                     </div>
                     <div>
                         <span class="heading">Depart</span>
-                        <input class="date departure datepicker form-control input" placeholder="Departure Date"
-                            type="text" readonly="readonly">
+                        <input class="date departure datepicker form-control input" placeholder="Departure Date"type="text" readonly="readonly" id="departure">
                     </div>
                     <div>
                         <span class="heading">Adults</span>
@@ -1355,42 +1354,39 @@
     <script src="assets/js/vendor/owl.carousel.min.js"></script>
     <script src="assets/js/vendor/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <!-- <script>
-        $('.arrival.datepicker').datepicker({
-            format: 'dd-mm-yyyy',
-            startDate: '+1d',
-            endDate: '+364d',
-            todayHighlight: true,
-            onSelect: function (date) {
-                var arrivalDate = new Date(date);
-                var minDepartureDate = new Date(arrivalDate);
-                minDepartureDate.setDate(minDepartureDate.getDate() + 2);
+    <script>
+  $(function () {
+    var today = new Date();
+    var maxArrivalDate = new Date();
+    maxArrivalDate.setDate(today.getDate() + 364);
 
-                $('.departure.datepicker').datepicker('setStartDate', minDepartureDate);
-                $('.departure.datepicker').datepicker('update', minDepartureDate);
-            }
-        });
+    var maxDepartureDate = new Date();
+    maxDepartureDate.setDate(today.getDate() + 365);
 
-        $('.departure.datepicker').datepicker({
-            format: 'dd-mm-yyyy',
-            startDate: '+2d',
-            endDate: '+365d',
-            autoclose: true,
-            todayHighlight: true
-        });
-    </script> -->
-    <!-- <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const iframe = document.querySelector('.youtube-video-wrapper iframe');
-            iframe.style.opacity = '0';
-            iframe.addEventListener('load', function() {
-                setTimeout(() => {
-                    iframe.style.transition = 'opacity 1s ease';
-                    iframe.style.opacity = '1';
-                }, 500);
-            });
-        });
-</script> -->
+    var departureMinDate = new Date();
+    departureMinDate.setDate(today.getDate() + 1);
+    $("#departure").datepicker({
+      dateFormat: "dd-mm-yy",
+      minDate: departureMinDate,
+      maxDate: maxDepartureDate
+    });
+
+    $("#arrival").datepicker({
+      dateFormat: "dd-mm-yy",
+      minDate: today,
+      maxDate: maxArrivalDate,
+      onSelect: function (selectedDate) {
+        var arrivalDate = $(this).datepicker('getDate');
+        var nextDay = new Date(arrivalDate);
+        nextDay.setDate(arrivalDate.getDate() + 1);
+
+        $("#departure").datepicker("option", "minDate", nextDay);
+        $("#departure").datepicker("setDate", nextDay);
+      }
+    });
+  });
+</script>
+    
 </body>
 
 </html>
